--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # To add assets to your application
+  # and add an assets section, like this:
   assets:
       - assets/
       - assets/12.jpg
